compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test-28.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn run() { case 1, 2 { a, b -> a } }"

---
-module(the_app).
-compile(no_auto_import).

-export([run/0]).

-spec run() -> integer().
run() ->
    case {1, 2} of
        {A, B} ->
            A
    end.

