compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test-3.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn go() {\n    let fifteen = 0xF\n    let nine = 0o11\n    let ten = 0b1010\n  fifteen\n}"

---
-module(the_app).
-compile(no_auto_import).

-export([go/0]).

-spec go() -> integer().
go() ->
    Fifteen = 16#F,
    Nine = 8#11,
    Ten = 2#1010,
    Fifteen.

