compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test-30.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn go(a) {\n  let a = a + 1\n  a\n}\n\n                    "

---
-module(the_app).
-compile(no_auto_import).

-export([go/1]).

-spec go(integer()) -> integer().
go(A) ->
    A@1 = A + 1,
    A@1.

