compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test-33.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main(args) {\n  case args {\n    _ -> {\n      let a = 1\n      a\n    }\n  }\n  let a = 2\n  a\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/1]).

-spec main(any()) -> integer().
main(Args) ->
    case Args of
        _@1 ->
            A = 1,
            A
    end,
    A@1 = 2,
    A@1.

