compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test-5.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn t() { True }"

---
-module(the_app).
-compile(no_auto_import).

-export([t/0]).

-spec t() -> boolean().
t() ->
    true.

