compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test-7.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn loop() { loop() }"

---
-module(the_app).
-compile(no_auto_import).

-export([loop/0]).

-spec loop() -> any().
loop() ->
    loop().

